feat: Integrate MCR and Code modules
This commit integrates the MCR (Model Context Reasoner) and Code modules to provide a more advanced, AI-driven software engineering experience.

Key changes:
- Refactored shared classes (`ILMClient`, `LMResponse`, `LMUsage`) to use a common module and modern Java records, removing duplication and improving code quality.
- Enhanced the MCR's reasoning prompt to encourage me to make file modifications, enabling me to act on my reasoning.
- Introduced an in-memory file manager and backend for more reliable and isolated testing.
- Added an integration test (`ReasoningIntegrationTest`) to verify the end-to-end reasoning-to-action workflow.

Note: The new integration test is currently failing with a `PrologParseException`. Further debugging is required to resolve this issue.